--- a/styles.css
+++ b/styles.css
@@ -190,129 +190,130 @@ html {
     }
 
     /* inicio contatos retrato */
-
     .contatos {
         display: flex;
-    }
-
-    #logo-fim {
+      }
+      
+      #logo-fim {
         display: none;
         width: 0%;
-    }
-
-    .musica-fim {
+      }
+      
+      .musica-fim {
         display: flex;
         flex-direction: column;
         width: 8.5%;
         margin: 5% 0% 0% 79.7%;
         position: absolute;
-        z-index: 5;
-    }
-
-    .sobrepostos {
+        top: 0;
+        left: 0;
+      }
+      
+      .sobrepostos {
         display: flex;
         position: relative;
         width: 88%;
         margin: 0% 0% 0% 0%;
-
+      
         #eu {
-            position: absolute;
-            margin-left: -2%;
-            z-index: 0;
-            width: 100%;
+          position: relative;
+          margin-left: -2%;
+          width: 100%;
         }
-
+      
         #quadro {
-            width: 76%;
-            margin: -6% 0% 0% 20%;
-            position: absolute;
-            z-index: 1;
+          width: 76%;
+          margin: -6% 0% 0% 20%;
+          position: relative;
+          top: 0;
+          left: 0;
         }
-
+      
         #parte-do-show {
-            position: absolute;
-            z-index: 2;
-            line-height: 1.261em;
-            font-family: 'fonte-economica', monospace;
-            text-align: center;
-            margin: 60.5% 0% 0% 35%;
-            font-weight: 300;
-            font-size: 100%;
-            letter-spacing: 0.05em;
-            text-shadow: 0.0441em 0.0606em 0.0125em rgba(0, 0, 0, 0.300000);
+          position: absolute;
+          top: 60.5%;
+          left: 35%;
+          line-height: 1.261em;
+          font-family: "fonte-economica", monospace;
+          text-align: center;
+          font-weight: 300;
+          font-size: 100%;
+          letter-spacing: 0.05em;
+          text-shadow: 0.0441em 0.0606em 0.0125em rgba(0, 0, 0, 0.300000);
         }
-
+      
         #toque {
-            position: absolute;
-            z-index: 3;
-            font-size: 80%;
-            direction: ltr;
-            font-family: 'fonte-geral', monospace;
-            text-align: center;
-            margin-left: 36%;
-            margin-top: 80%;
-            line-height: 100%;
-            text-transform: none;
-            letter-spacing: -0.05em;
+          position: absolute;
+          top: 80%;
+          left: 36%;
+          font-size: 80%;
+          direction: ltr;
+          font-family: "fonte-geral", monospace;
+          text-align: center;
+          line-height: 100%;
+          text-transform: none;
+          letter-spacing: -0.05em;
         }
-
+      
         #ej200 {
-            position: absolute;
-            z-index: 4;
-            width: 20%;
-            margin-left: 30%;
-            margin: 68% 0% 0% 48%;
-            transform: rotate(-25deg);
+          position: absolute;
+          top: 68%;
+          left: 48%;
+          width: 20%;
+          margin: 0;
+          transform: rotate(-25deg);
         }
-    }
-
-    .bora {
+      }
+      
+      .bora {
         display: flex;
         position: absolute;
         width: 100%;
         margin: 87% 0% 0% 5.5%;
-        z-index: 5;
-
+        top: 0;
+        left: 0;
+      
         #chamada {
-            direction: ltr;
-            font-family: 'fonte-geral', monospace;
-            text-align: center;
-            line-height: 1.3em;
-            text-transform: none;
-            letter-spacing: 0.02em;
-            font-weight: 350;
-            font-size: 106.5%;
-            white-space: nowrap;
+          direction: ltr;
+          font-family: "fonte-geral", monospace;
+          text-align: center;
+          line-height: 1.3em;
+          text-transform: none;
+          letter-spacing: 0.02em;
+          font-weight: 350;
+          font-size: 106.5%;
+          white-space: nowrap;
         }
-    }
-
-    .sociais-fim {
+      }
+      
+      .sociais-fim {
         display: flex;
         max-width: 15%;
         align-items: center;
         margin: 101.5% 0% 0% 11%;
         padding-bottom: 3%;
         position: absolute;
-        z-index: 6;
-    }
-
-    .button-fim {
+        top: 0;
+        left: 0;
+      }
+      
+      .button-fim {
         margin: 125% 0% 0% 15%;
         padding: 8%;
         position: absolute;
-        z-index: 11;
-    }
-
-    #siga-nos {
+        top: 0;
+        left: 0;
+      }
+      
+      #siga-nos {
         margin-right: 5%;
-        font-family: 'fonte-geral', monospace;
+        font-family: "fonte-geral", monospace;
         text-transform: none;
         flex: 1;
         flex-grow: 1;
         flex-shrink: 0;
         white-space: nowrap;
-    }
-
+      }
 }
 
 /* celular pequenos na orientação paisagem */
