--- a/styles.css
+++ b/styles.css
@@ -202,11 +202,9 @@ html {
       .musica-fim {
         display: flex;
         flex-direction: column;
-        width: 8.5%;
-        margin: 5% 0% 0% 79.7%;
+        width: 10%;
+        margin: 0% 0% 0% 86.5%;
         position: absolute;
-        top: 0;
-        left: 0;
       }
       
       .sobrepostos {
@@ -216,12 +214,12 @@ html {
         margin: 0% 0% 0% 0%;
       
         #eu {
-            dispay: none;
+            display: none;
         }
 
         #eu2 {
           position: relative;
-          margin-left: -2%;
+          margin-left: 5%;
           width: 100%;
         }
       
@@ -230,14 +228,13 @@ html {
           width: 76%;
           margin: -6% 0% 0% 20%;
           position: relative;
-          top: 0;
-          left: 0;
-        }
+        } 
       
         #parte-do-show {
           position: absolute;
-          top: 60.5%;
-          left: 35%;
+          top: 58%;
+          left: 40%;
+          z-index: 11;
           line-height: 1.261em;
           font-family: "fonte-economica", monospace;
           text-align: center;
@@ -248,9 +245,11 @@ html {
         }
       
         #toque {
+          padding-top: 17%;
           position: absolute;
-          top: 80%;
-          left: 36%;
+          top: 63%;
+          left: 40%;
+          z-index: 10;
           font-size: 80%;
           direction: ltr;
           font-family: "fonte-geral", monospace;
@@ -261,7 +260,7 @@ html {
         }
       
         #ej200 {
-          display: none;
+          display:none;
           position: absolute;
           top: 68%;
           left: 48%;
@@ -269,26 +268,33 @@ html {
           margin: 0;
           transform: rotate(-25deg);
         }
+
+        #ej200-botao {
+            position: absolute;
+            top: 68%;
+            left: 48%;
+            width: 20%;
+            margin: 0;
+            z-index: 12;
+          }
       }
       
       .bora {
         display: flex;
         position: absolute;
         width: 100%;
-        margin: 87% 0% 0% 5.5%;
-        top: 0;
-        left: 0;
+        margin: 90% 0% 0% 5.5%;
       
         #chamada {
-          direction: ltr;
-          font-family: "fonte-geral", monospace;
-          text-align: center;
-          line-height: 1.3em;
-          text-transform: none;
-          letter-spacing: 0.02em;
-          font-weight: 350;
-          font-size: 106.5%;
-          white-space: nowrap;
+        direction: ltr;
+        font-family: "fonte-geral", monospace;
+        text-align: center;
+        line-height: 1.3em;
+        text-transform: none;
+        letter-spacing: 0.02em;
+        font-weight: 350;
+        font-size: 106.5%;
+        white-space: nowrap;
         }
       }
       
@@ -296,19 +302,15 @@ html {
         display: flex;
         max-width: 15%;
         align-items: center;
-        margin: 101.5% 0% 0% 11%;
+        margin: 103.5% 0% 0% 11%;
         padding-bottom: 3%;
         position: absolute;
-        top: 0;
-        left: 0;
       }
       
       .button-fim {
-        margin: 125% 0% 0% 15%;
+        margin: 121% 0% 0% 15%;
         padding: 8%;
         position: absolute;
-        top: 0;
-        left: 0;
       }
       
       #siga-nos {
