--- a/styles.css
+++ b/styles.css
@@ -871,6 +871,10 @@ html {
                 width: 100%;
             }
 
+            #eu-mob {
+                display: none;
+            }
+
             #quadro {
                 width: 76%;
                 margin: -5% 0% 0% 15%;
