--- a/styles.css
+++ b/styles.css
@@ -872,7 +872,7 @@ html {
             }
 
             #eu-mob {
-                display: none;
+                display:none;
             }
 
             #quadro {
@@ -1304,6 +1304,10 @@ html {
                 margin-left: -6%;
                 z-index: 0;
                 width: 100%;
+            }
+
+            #eu-mob {
+                display:none;
             }
 
             #quadro {
