--- a/styles.css
+++ b/styles.css
@@ -597,8 +597,8 @@ html {
         z-index: 5;
         display: flex;
         flex-direction: row;
-        margin: 123.5% 0% 0% 41.5%;
-        max-width: 15%;
+        margin: 100% 0% 0% 43.5%;
+        max-width: 13%;
         justify-content: space-evenly;
     }
 
@@ -623,7 +623,7 @@ html {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        margin: 33% 0% 10% 2.5%;
+        margin: 53% 0% 10% 2.5%;
         width: 95%;
         height: 132vh;
     }
@@ -642,8 +642,8 @@ html {
     .musica-fim {
         display: flex;
         flex-direction: column;
-        width: 8.5%;
-        margin: 5% 0% 0% 79.7%;
+        width: 10%;
+        margin: 33% 0% 0% 78.7%;
         position: absolute;
         z-index: 5;
     }
@@ -652,13 +652,17 @@ html {
         display: flex;
         position: relative;
         width: 88%;
-        margin: 0% 0% 0% 0%;
+        margin: 30% 0% 0% 0%;
 
         #eu {
             position: absolute;
             margin-left: -2%;
             z-index: 0;
             width: 100%;
+        }
+
+        #eu-mob {
+            display:none;
         }
 
         #quadro {
@@ -674,7 +678,7 @@ html {
             line-height: 1.261em;
             font-family: 'fonte-economica', monospace;
             text-align: center;
-            margin: 60.5% 0% 0% 35%;
+            margin: 60.5% 0% 0% 43%;
             font-weight: 300;
             font-size: 100%;
             letter-spacing: 0.05em;
@@ -688,7 +692,7 @@ html {
             direction: ltr;
             font-family: 'fonte-geral', monospace;
             text-align: center;
-            margin-left: 36%;
+            margin-left: 43%;
             margin-top: 80%;
             line-height: 100%;
             text-transform: none;
@@ -709,7 +713,7 @@ html {
         display: flex;
         position: absolute;
         width: 100%;
-        margin: 87% 0% 0% 5.5%;
+        margin: 116% 0% 0% 16.5%;
         z-index: 5;
 
         #chamada {
@@ -729,14 +733,14 @@ html {
         display: flex;
         max-width: 15%;
         align-items: center;
-        margin: 101.5% 0% 0% 11%;
+        margin: 125.5% 0% 0% 11%;
         padding-bottom: 3%;
         position: absolute;
         z-index: 6;
     }
 
     .button-fim {
-        margin: 125% 0% 0% 15%;
+        margin: 143% 0% 0% 24%;
         padding: 8%;
         position: absolute;
         z-index: 11;
