--- a/styles.css
+++ b/styles.css
@@ -608,6 +608,7 @@ html {
 
     .video-pc {
         display: none;
+        visibility: hidden;
         width: 0%;
     }
 
@@ -635,6 +636,7 @@ html {
       
       #logo-fim {
         display: none;
+        visibility: hidden;
         width: 0%;
       }
       
@@ -653,7 +655,8 @@ html {
         margin: 10% 0% 0% 0%;
       
         #eu {
-            display: none;
+          display:none;
+          visibility: hidden;
         }
 
         #eu-mob {
@@ -663,7 +666,8 @@ html {
         }
       
         #quadro {
-          display:none;
+          display: none;
+          visibility: hidden;
           width:0.1%;
           margin: -6% 0% 0% 20%;
         } 
@@ -698,6 +702,7 @@ html {
         }
       
         #ej200 {
+          display: none;
           visibility: hidden;
           top: 68%;
           left: 0%;
