--- a/styles.css
+++ b/styles.css
@@ -706,7 +706,7 @@ html {
           visibility: hidden;
           top: 68%;
           left: 0%;
-          width: 0.1%;
+          max-width: 0.1%;
           margin: 0;
           transform: rotate(-25deg);
         }
